--- a/AMS/Protokoll/main.tex
+++ b/AMS/Protokoll/main.tex
@@ -19,6 +19,7 @@ separate-uncertainty,  % Unsicherheiten seperat angeben (mit ±)
 ]{siunitx}
 \usepackage{physics}  % Erstellung von Gleichungen vereinfachen
 
+\usepackage{xcolor}
 \usepackage{graphicx}  % Bilder einbinden \includegraphics{Pfad/zur/Datei(ohne Dateiendung)}
 
 % Gestaltung
@@ -42,6 +43,7 @@ separate-uncertainty,  % Unsicherheiten seperat angeben (mit ±)
 
 % Tabellen mit geteilten Zeilen
 \usepackage{multirow}
+\usepackage{colortbl}
 
 % Kopf-/Fußzeilen setzen
 \pagestyle{scrheadings}  % Stil für die Seite setzen
