--- a/AMS/Protokoll/diskussion.tex
+++ b/AMS/Protokoll/diskussion.tex
@@ -3,7 +3,7 @@
 Alle Aufgabenteile konnten erfolgreich abgeschlossen werden.
 
 Im Niedrigenergiebereich wurden fünf verschiedene Proben auf ihre zusammensetzung untersucht.
-Dabei konnten in der 153BeO die Teilchen $^{16}$O$^{1-}$, $^{9}$Be$^{16}$O$^{1-}$ und $^{10}$Be$^{18}$O$^{1-}$ nachgewiesen werden.
+Dabei konnten in der 153BeO die Teilchen $^{16}$O$^{1-}$, $^{9}$Be$^{16}$O$^{1-}$ und $^{12}$C$^{16}$O$^{1-}$ bzw. $^{28}$Si$^{1-}$ nachgewiesen werden.
 In den anderen Proben konnten diverse andere Teilchen, darunter bereits erwähnte mit anderen Nukliden sowie AlO gefunden werden.
 Zusätzlich wurden einige unbekannte Stoffe gefunden, die wir in diesem Praktikum nicht genauer identifizieren konnten.
 Mit einer genauerem Untersuchung der Probe bzw. genaueren Wissen über potentiell vorkommende Elemente sollte das aber auch möglich sein.
@@ -13,11 +13,13 @@ Bei dieser wurden die Nuklide $^{9}$Be, $^{10}$Be, $^{12}$C, $^{16}$O und $^{26}
 Hier ist teilweise eine recht große Ungenauigkeit zwischen berechneter Masse und dem Nuklid vorhanden.
 Dies lässt sich zumindest teilweise auf die unbekannten Ungenauigkeiten der Messung zurückführen.
 Möglicherweise wurden hier auch einzelne Ionen fehlgedeutet.
-Mit Kenntnis der Ungenauigkeiten könnte dies genauer werden.
+Mit Kenntnis der Ursache der Ungenauigkeiten könnte dies genauer werden.
 
 Weiterhin wurde die Detektion und Identifikation von $^{10}\text{Be}$ in einer Gasgefüllten Ionisationsdetektor vorgenommen.
 Eine Trennung von den meisten unerwünschten Nukliden die nach dem Beschleuniger auftreten erfolgt durch einen Ablenkmagneten und einen ESA.
-Die Identifikation ist trotz dem potentiellen Auftreten des Isobars $^{10}\text{B}$ möglich.
+Aber auch das Isotop $^{9}\text{Be}$ kann gefunden werden, obwohl man es eigentlich durch Vorselektion aussortieren wollte.
+Als Ursache dafür wurde die Molekülbildung von $^{9}\text{Be}^{1}\text{H}^{2+}$ angeführt.
+Die Identifikation ist trotz des Auftretens des Isobars $^{10}\text{B}$ möglich.
 Es ist sogar möglich das Isobar quantitativ im Spektrum von $^{10}\text{Be}$ zu trennen, womit grundsätzlich eine genaue Bestimmung des Anteils des radioaktiven Isotops $^{10}\text{Be}$ möglich ist, und damit die eigentliche Altersbestimmung.
 
 Die Anteilsbestimmung wurde im letzten Versuchsteil vorgenommen.
